--- a/src/renderer/main.css
+++ b/src/renderer/main.css
@@ -1,3 +1,22 @@
+@font-face {
+  font-family: 'Yozai';
+  src: url('../../resources/Yozai-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Yozai';
+  src: url('../../resources/Yozai-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Yozai';
+  src: url('../../resources/Yozai-Medium.ttf') format('truetype');
+  font-weight: 700;
+}
+
+
 body {
   min-height: 100vh;
   margin: 0;
