--- a/src/canvas/shape/crawler_shape.css
+++ b/src/canvas/shape/crawler_shape.css
@@ -1,14 +1,16 @@
 .crawler-shape {
-    padding: 8px 15px 15px 12px;
+    padding: 6px 12px 12px 12px;
     text-wrap: none;
+    width: 100%;
+    height: 100%;
 
     .icon {
-        font-size: 58px;
+        font-size: 20px;
     }
 
     .title {
         font-size: 16px;
-        font-weight: bold;
+        font-weight: 900;
     }
 
     .tag {
